--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <img loading="lazy" decoding="async" src="\assets\images\icons8-pricing.svg" alt="toolbox icon" width="42" height="42" aria-hidden="true">
+                    <img loading="lazy" decoding="async" src="\assets\images\pricing.svg" alt="toolbox icon" width="42" height="42" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">Competitive Pricing</h3>
                 <p class="cs-item-text">
