home page changes

--- a/src/content/pages/Gutter-Repair.html
+++ b/src/content/pages/Gutter-Repair.html
@@ -24,7 +24,7 @@ eleventyNavigation:
         <span class="cs-int-title">Gutter Repair Services</span>
         <div class="cs-breadcrumbs">
             <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link">GUTTER REPAIR</a>
+            <a href="" class="cs-link">Gutter Repair</a>
         </div>
     </div>
     <!--Background Image-->
