--- a/src/content/pages/Seamless-Gutter-Systems.html
+++ b/src/content/pages/Seamless-Gutter-Systems.html
@@ -24,7 +24,7 @@ eleventyNavigation:
         <span class="cs-int-title">SEAMLESS GUTTER INSTALLATION</span>
         <div class="cs-breadcrumbs">
             <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link">SEAMLESS GUTTER INSTALLATION</a>
+            <a href="" class="cs-link">Seamless Gutter Installation</a>
         </div>
     </div>
     <!--Background Image-->
