--- a/src/content/pages/Soffit-Repair.html
+++ b/src/content/pages/Soffit-Repair.html
@@ -24,7 +24,7 @@ eleventyNavigation:
         <span class="cs-int-title">SOFFIT REPAIR</span>
         <div class="cs-breadcrumbs">
             <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link">Soffit REPAIR</a>
+            <a href="" class="cs-link">Soffit Repair</a>
         </div>
     </div>
     <!--Background Image-->
