--- a/src/content/pages/Gutter-Guards.html
+++ b/src/content/pages/Gutter-Guards.html
@@ -24,7 +24,7 @@ eleventyNavigation:
         <span class="cs-int-title">Gutter Guard Services</span>
         <div class="cs-breadcrumbs">
             <a href="" class="cs-link">Home</a>
-            <a href="" class="cs-link">GUTTER GUARDS</a>
+            <a href="" class="cs-link">Gutter Guards</a>
         </div>
     </div>
     <!--Background Image-->
