--- a/src/content/pages/Soffit-Installation.html
+++ b/src/content/pages/Soffit-Installation.html
@@ -55,9 +55,9 @@ eleventyNavigation:
         </div>
         <div class="cs-image-group">
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/Soffit.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/Soffit.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Soffit.jpg" alt="yard" width="558" height="496">
+                <source media="(max-width: 600px)" srcset="/assets/images/Soffit1.png">
+                <source media="(min-width: 601px)" srcset="/assets/images/Soffit1.png">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Soffit1.png" alt="yard" width="558" height="496">
             </picture>
           
             
