--- a/src/content/pages/Gutter-Cleaning.html
+++ b/src/content/pages/Gutter-Cleaning.html
@@ -48,7 +48,7 @@ eleventyNavigation:
             <h2 class="cs-title">Gutter Cleaning Services</h2>
             <p class="cs-text">
                 Cleaning your gutters is risky and can be downright frustrating. Avoid the hassle by calling a professional gutter cleaning service who has the tools and knowledge to safely clean your gutters.
-          <p>        Precision Seamless Gutters cleans gutters for homes and businesses throughout Fort Bend, Wharton, Brazoria, and Harris County. We remove leaves, twigs, and other debris from your gutters, encouraging proper drainage and efficiently directing water away from your home helping to prevent costly damage. </p>
+          <p>        No Leak Gutters cleans gutters for homes and businesses For Sarasota and Charlotte County. We remove leaves, twigs, and other debris from your gutters, encouraging proper drainage and efficiently directing water away from your home helping to prevent costly damage. </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
