--- a/src/content/pages/Soffit-Installation.html
+++ b/src/content/pages/Soffit-Installation.html
@@ -48,7 +48,7 @@ eleventyNavigation:
             <h2 class="cs-title">Soffit Installation Services</h2>
             <p class="cs-text">
                 Seamless gutters are a special type of gutter system that capture and redirect the flow of water. These gutter systems are often made of aluminum and come in a wide variety of colors that blend seamlessly into your home.
-          <p>         Compared to traditional gutters, seamless gutter systems eliminate seams along the gutter. This helps prevent leaks that can lead to costly property damage, foundation issues, and destroyed landscaping.   </p>
+          <p>         Compared to traditional gutters, seamless gutter systems eliminate seams along the gutter. This helps prevent leaks that can lead to costly property damage, foundation issues, and destroyed landscaping. We match our valleys at every corner so that your home has a seamless premium look.   </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
