--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@ eleventyNavigation:
             </li>
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <img loading="lazy" decoding="async" src="\assets\images\pricing.svg" alt="toolbox icon" width="42" height="42" aria-hidden="true">
+                    <img loading="lazy" decoding="async" src="\assets\images\icons8-pricing1.svg" alt="toolbox icon" width="42" height="42" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">Competitive Pricing</h3>
                 <p class="cs-item-text">
@@ -131,7 +131,7 @@ well as all surrounding areas.
                     </picture>
                     <h3 class="cs-h3">Seamless Gutter Installation</h3>
                     <p class="cs-item-text">
-                   We guarantee water stays in the gutter. With our custom corners we guarantee our gutters last longer and look better than others. Making your home stand out.
+                 We guarantee our water stays in the gutter with our custom corners. Your gutters last longer and make your home stand out!
                     </p>
                 </a>
             </li>
@@ -189,7 +189,7 @@ well as all surrounding areas.
                     </picture>
                     <h3 class="cs-h3">Soffit Repair</h3>
                     <p class="cs-item-text">
-                        Count on us to repair and fortify your soffits for lasting protection.
+                        Count on us to repair and fortify your soffits for lasting protection and a beautiful home.
                     </p>
                 </a>
             </li>
@@ -223,7 +223,7 @@ well as all surrounding areas.
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Our Process</span>
-            <h2 class="cs-title">We make sure you get the best job ever</h2>
+            <h2 class="cs-title">We make it quick and easy</h2>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -249,7 +249,7 @@ well as all surrounding areas.
             </li>
             <li class="cs-item">
                 <img src="\assets\images\Inspection.svg" alt="icon" class="cs-icon" aria-hidden="true" decoding="async" width="60" height="60">
-                <h3 class="cs-h3">Relax & <br> Enjoy</h3>
+                <h3 class="cs-h3">Relax & Enjoy <br></h3>
                 <p class="cs-item-text">
                    Enjoy the peace of mind that comes with a fully functioning gutter system, ready to safeguard your home. You can relax and enjoy the benefits of a brand new gutter system with free-flowing water.
                 </p>
@@ -272,7 +272,7 @@ well as all surrounding areas.
             <li class="cs-item">
                 <div class="cs-flex-group">
                     <span class="cs-name">
-                        Britney A
+                         Mark S
                         <span class="cs-job">Customer</span>
                     </span>
                 </div>
@@ -288,7 +288,7 @@ well as all surrounding areas.
             <li class="cs-item">
                 <div class="cs-flex-group">
                     <span class="cs-name">
-                        Mark S
+                        Britney A
                         <span class="cs-job">Builder</span>
                     </span>
                 </div>
@@ -318,9 +318,9 @@ well as all surrounding areas.
             <div class="cs-flex">
                 <span class="cs-topper">A PEOPLE-FIRST APPROACH</span>
                 <h2 class="cs-title">Family-Owned <br>& Built Different</h2>
-                <p> Our family has had the honor of installing gutters and serving Florida homeowners for over 10 years. </p>.
+                <p>  Treating your home like our own. Our family has had the honor of installing gutters and serving Florida homeowners for over 10 years. </p>.
             </div>
-            <a href="" class="cs-button-solid">About Us</a>
+            <a href="/about" class="cs-button-solid">About Us</a>
         </div>
         <ul class="cs-card-group">
           
