--- a/src/content/pages/Gutter-Repair.html
+++ b/src/content/pages/Gutter-Repair.html
@@ -47,19 +47,19 @@ eleventyNavigation:
         <div class="cs-content">
             <h2 class="cs-title">Gutter Repair Services</h2>
             <p class="cs-text">
-                Precision Seamless Gutters offers gutter repair services to address issues, such as clogged and damaged systems. Our team of experts will identify the root cause of the issues and create a comprehensive report on whether your current system can be repaired or if it needs replaced.
-          <p>         Our #1 goal is to effectively and efficiently get water flowing correctly so your property is protected from water damage.
-
- </p>
+                No Leak Gutters offers gutter repair services to address issues, such as clogged and damaged systems. Our team of experts will identify the root cause of the issues and create a comprehensive report on whether your current system can be repaired or if it needs replaced.
+          <p class="cs-text">         Our #1 goal is to effectively and efficiently get water flowing correctly so your property is protected from water damage.</p>
+           <p class="cs-text"> Over the years we perfected our own custom corners. Throw away the miters and other connections and let us cut our corners to the shape your home needs. Giving you a premium look for an affordable price 
+          </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
         </div>
         <div class="cs-image-group">
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/Repair.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/Repair.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Repair.jpg" alt="yard" width="558" height="496">
+                <source media="(max-width: 600px)" srcset="/assets/images/Banner1.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/images/Banner1.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Banner1.jpg" alt="yard" width="558" height="496">
             </picture>
           
             
