--- a/src/content/pages/Seamless-Gutter-Systems.html
+++ b/src/content/pages/Seamless-Gutter-Systems.html
@@ -47,8 +47,12 @@ eleventyNavigation:
         <div class="cs-content">
             <h2 class="cs-title">Seamless Gutter Systems</h2>
             <p class="cs-text">
-                Seamless gutters are a special type of gutter system that capture and redirect the flow of water. These gutter systems are often made of aluminum and come in a wide variety of colors that blend seamlessly into your home.
-          <p>         Compared to traditional gutters, seamless gutter systems eliminate seams along the gutter. This helps prevent leaks that can lead to costly property damage, foundation issues, and destroyed landscaping.   </p>
+                Seamless gutters are a special type of gutter system that capture and redirect the flow of water. These gutter systems are often made of aluminum and come in a wide variety of colors that blend seamlessly into your home.</p>
+          <p class="cs-text">         Compared to traditional gutters, seamless gutter systems eliminate seams along the gutter. This helps prevent leaks that can lead to costly property damage, foundation issues, and destroyed landscaping.   
+
+           <p class="cs-text"> Over the years we perfected our own custom corners. Throw away the miters and other connections and let us cut our corners to the shape your home needs. Giving you a premium look for an affordable price 
+          </p>
+       
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
@@ -85,7 +89,7 @@ eleventyNavigation:
                 
                 <h3 class="cs-h3">Added Durability</h3>
                 <p class="cs-item-text">
-                Since seamless gutters are one section, they're easier to maintain and are more storm resistant. Aluminum gutters also do not rust or warp in the Texas heat.
+                Since seamless gutters are one section, they're easier to maintain and are more storm resistant. Aluminum gutters also do not rust or warp in the Florida heat.
                 </p>
             </li>
             <li class="cs-item">
