--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -52,6 +52,7 @@ permalink: 'contact/'
                     <option value="Gutter Guards">Gutter Guards</option>
                     <option value="Soffit Installation">Soffit Installation</option>
                     <option value="Soffit Repair">Soffit Repair</option>
+                    <option value="Soffit Repair">Full Gutter + Soffit Job</option>
                 </select>
             </label>
             <label class="cs-label cs-message">
