--- a/src/content/pages/projects.html
+++ b/src/content/pages/projects.html
@@ -39,67 +39,92 @@ eleventyNavigation:
             <!-- Image 1 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/Picture1.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Picture1.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/Picture1.jpg" alt="fancy house" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic1.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic1.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/Pic1.jpg" alt="fancy house" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 2 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/Picture2.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Picture2.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/Picture2.jpg" alt="modern house" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic2.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic2.jpg">
+                    <img loading="lazy" decoding="async" src="/assets/images/Pic2.jpg" alt="modern house" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 3 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/Picture3.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Picture3.png">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Picture3.png" alt="modern home at night" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic3.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic3.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic3.jpg" alt="modern home at night" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 4 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/soffit.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/soffit.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/soffit.jpg" alt="modern home" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic4.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic4.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic4.jpg" alt="modern home" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 5 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/soffit1.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/soffit1.png">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/soffit1.png" alt="appliance" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic5.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic5.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic5.jpg" alt="appliance" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 6 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/soffit.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/soffit.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/soffit.jpg" alt="modern home" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic6.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic6.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic6.jpg" alt="modern home" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 7 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/soffit.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/soffit.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/soffit.jpg" alt="modern home" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic7.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic7.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic7.jpg" alt="modern home" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 8 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/soffit.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/soffit.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/soffit.jpg" alt="modern home" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic8.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic8.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic8.jpg" alt="modern home" width="346" height="346">
                 </picture>
             </li>
+            <!-- Image 9 -->
+            <li class="cs-item">
+                <picture class="cs-picture">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic9.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic9.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic9.jpg" alt="modern home" width="346" height="346">
+                </picture>
+            </li>
+            <!-- Image 10 -->
+            <li class="cs-item">
+                <picture class="cs-picture">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic10.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic10.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic10.jpg" alt="modern home" width="346" height="346">
+                </picture>
+            </li>
+            <!-- Image 11 -->
+            <li class="cs-item">
+                <picture class="cs-picture">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic11.jpg">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic11.jpg">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic11.jpg" alt="modern home" width="346" height="346">
+                </picture>
+            </li>
+          
         </ul>
         <a href="/contact" class="cs-button-solid">Contact Us</a>
     </div>
