--- a/src/content/pages/Soffit-Repair.html
+++ b/src/content/pages/Soffit-Repair.html
@@ -21,7 +21,7 @@ eleventyNavigation:
 
 <div id="banner-1106">
     <div class="cs-container">
-        <span class="cs-int-title">SOFFIT REPAIR</span>
+        <span class="cs-int-title">Soffit Repair</span>
         <div class="cs-breadcrumbs">
             <a href="" class="cs-link">Home</a>
             <a href="" class="cs-link">Soffit Repair</a>
