--- a/src/index.html
+++ b/src/index.html
@@ -302,7 +302,7 @@ well as all surrounding areas.
                 <img class="cs-quote" aria-hidden="true" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gray-quote.svg" decoding="async" alt="quote icon" width="120" height="99">
             </li>
         </ul>
-        <a href="" class="cs-button-1" aria-label="read more about us">Read More Reviews</a>
+        <a href="/reviews" class="cs-button-1" aria-label="read more about us">Read More Reviews</a>
                                 
     </div>
 </section>
