--- a/src/content/pages/Soffit-Repair.html
+++ b/src/content/pages/Soffit-Repair.html
@@ -30,10 +30,10 @@ eleventyNavigation:
     <!--Background Image-->
     <picture class="cs-background">
         <!--Mobile Image-->
-        <source media="(max-width: 600px)" srcset="/assets/images/Banner.png">
+        <source media="(max-width: 600px)" srcset="/assets/images/Header.png">
         <!--Tablet and above Image-->
-        <source media="(min-width: 601px)" srcset="/assets/images/Banner.png">
-        <img decoding="async" src="/assets/images/Banner.png" alt="mechanic" width="1280" height="568" aria-hidden="true">
+        <source media="(min-width: 601px)" srcset="/assets/images/Header.png">
+        <img decoding="async" src="/assets/images/Header.png" alt="mechanic" width="1280" height="568" aria-hidden="true">
     </picture>
 </div>
 
@@ -47,8 +47,12 @@ eleventyNavigation:
         <div class="cs-content">
             <h2 class="cs-title">Soffit Repair Services</h2>
             <p class="cs-text">
-                Seamless gutters are a special type of gutter system that capture and redirect the flow of water. These gutter systems are often made of aluminum and come in a wide variety of colors that blend seamlessly into your home.
-          <p>         Compared to traditional gutters, seamless gutter systems eliminate seams along the gutter. This helps prevent leaks that can lead to costly property damage, foundation issues, and destroyed landscaping. We match our valleys at every corner so that your home has a seamless premium look.   </p>
+              Are you tired of dealing with damaged or deteriorating soffits that detract from the appearance and functionality of your home? Look no further than No Leak Gutters for expert soffit repair services that address common issues and complaints head-on.
+          <p>        Soffits play a crucial role in protecting your home's roof and attic from moisture, pests, and other environmental hazards. Over time, they can suffer from a variety of problems, including rot, water damage, mold growth, and pest infestations. These issues not only compromise the structural integrity of your home but also detract from its aesthetic appeal.
+            <p> At No Leak Gutters, our team of skilled professionals specializes in diagnosing and repairing soffit problems efficiently and effectively. Whether it's replacing rotted or damaged sections, addressing water infiltration issues, or mitigating pest infestations, we have the expertise and resources to restore your soffits to their optimal condition.
+            <p> We understand that every home is unique, which is why we tailor our repair solutions to meet your specific needs and budget. Using high-quality materials and proven repair techniques, we ensure that your soffits not only look great but also provide long-lasting protection for your home
+             <p> Don't let damaged soffits compromise the integrity and beauty of your home any longer. Trust the experts at No Leak Gutters to deliver reliable and affordable soffit repair solutions that stand the test of time. Contact us today to schedule a consultation and take the first step toward restoring your home's exterior to its former glory.    
+          </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
