--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -31,10 +31,10 @@ eleventyNavigation:
     <!--Background Image-->
     <picture class="cs-background">
         <!--Mobile Image-->
-        <source media="(max-width: 600px)" srcset="/assets/images/Banner.png">
+        <source media="(max-width: 600px)" srcset="/assets/images/Header.png">
         <!--Tablet and above Image-->
-        <source media="(min-width: 601px)" srcset="/assets/images/Banner.png">
-        <img decoding="async" src="/assets/images/Banner.png" alt="mechanic" width="1280" height="568" aria-hidden="true">
+        <source media="(min-width: 601px)" srcset="/assets/images/Header.png">
+        <img decoding="async" src="/assets/images/Header.png" alt="mechanic" width="1280" height="568" aria-hidden="true">
     </picture>
 </div>
     <!-- ============================================ -->
