--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@ eleventyNavigation:
                 </picture>
                 <h3 class="cs-h3">Experience With Anyone</h3>
                 <p class="cs-item-text">
-               We take pride in our experience with creating successful partnerships with builders and homeowners
+               We take pride in creating successful partnerships with builders and homeowners
                 </p>
             </li>
         </ul>
@@ -318,7 +318,7 @@ well as all surrounding areas.
             <div class="cs-flex">
                 <span class="cs-topper">A PEOPLE-FIRST APPROACH</span>
                 <h2 class="cs-title">Family-Owned <br>& Built Different</h2>
-                <p>  Treating your home like our own. Our family has had the honor of installing gutters and serving Florida homeowners for over 10 years. </p>.
+                <p>  Treating your home like our own. Our family has had the honor of installing gutters and serving Florida homeowners for over 14 years. </p>.
             </div>
             <a href="/about" class="cs-button-solid">About Us</a>
         </div>
