--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -52,8 +52,10 @@ eleventyNavigation:
             <div class="cs-flex">
                 <span class="cs-topper">WHO WE ARE</span>
                 <h2 class="cs-title">Know Your Gutter Experts</h2>
-                <p>  For over 14 years, No Leak Gutters has served homeowners and businesses across Sarasota, and Charlotte counties. We’re expertly trained to tackle a variety of projects and we only use the most reliable products on the market. 
-                <br> <br> Our factory-certified, top-rated professionals have been recognized for a commitment to high-level customer service. When you choose us, you can expect a beautiful and durable finished product that will reliably protect your property for decades to come. </p>
+                <p>  For over 14 years, No Leak Gutters has been the go-to choice for homeowners and businesses in Sarasota and Charlotte counties seeking top-notch gutter solutions. Our extensive experience in the industry has equipped us with the expertise to handle a wide range of projects, from residential gutter installations to commercial gutter repairs and maintenance.
+             <br> <br> At No Leak Gutters, we prioritize quality and reliability above all else. That's why we exclusively use the most trusted and durable products available on the market. Our professionals undergo rigorous training to ensure they deliver exceptional craftsmanship and service on every job. 
+             <br> <br> Customer satisfaction is at the heart of everything we do. Our team has earned a reputation for excellence and unwavering dedication to providing superior service. When you choose No Leak Gutters, you can trust that you're investing in a beautiful and long-lasting solution that will safeguard your property for years to come.
+             <br> <br> Whether you're looking to enhance the curb appeal of your home or protect your business premises from water damage, No Leak Gutters has you covered. Contact us today for a free consultation and discover why we're the leading choice for all your gutter needs. </p>
             </div>
            
         </div>
