--- a/src/content/pages/projects.html
+++ b/src/content/pages/projects.html
@@ -23,9 +23,9 @@ eleventyNavigation:
     <section id="int-hero">
         <h1 id="home-h">Our Projects</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/Banner.png">
-            <source media="(min-width: 601px)" srcset="/assets/images/Banner.png">
-            <img aria-hidden="true" decoding="async" src="/assets/images/Banner.png" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/Header.png">
+            <source media="(min-width: 601px)" srcset="/assets/images/Header.png">
+            <img aria-hidden="true" decoding="async" src="/assets/images/Header.png" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
